navbar z-index fix

--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -23,6 +23,7 @@ header
   background-color: #ffffff
   padding: unset !important
   margin: unset !important
+  z-index: 1000
   @media screen and ( max-width: 1000px )
       background: #fff !important
       display: block
